adding PCA analysis

--- a/Adriel/PCA_Clustering.ipynb
+++ b/Adriel/PCA_Clustering.ipynb
@@ -20246,6 +20246,19 @@
     "# Show the plot\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis\n",
+    "* By conducting both dimension reduction & clustering, it seems like our model was able to recognize a structure that our spotify data can be organized by even without the inclusion of the \"Genre\" feature. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
