--- a/christian/data_collection.ipynb
+++ b/christian/data_collection.ipynb
@@ -964,6 +964,66 @@
     "plt.ylabel('PCA Component 2')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 67.14%\n",
+      "Encoded labels for genres: ['Dance/Electronic' 'R&B' 'country' 'easy listening' 'hip hop' 'latin'\n",
+      " 'metal' 'pop' 'rock']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('/Users/thiccboiii/class projects /Final-project-group-4/christian/songs_normalize.csv')\n",
+    "\n",
+    "# Filter for the specific genres\n",
+    "genres_to_test = ['pop', 'hip hop', 'rock', 'Dance/Electronic', 'latin', 'R&B', 'country', 'metal', 'easy listening']\n",
+    "df_filtered = df[df['genre'].isin(genres_to_test)]\n",
+    "\n",
+    "# Select features and target variable\n",
+    "features = ['tempo', 'danceability', 'liveness', 'energy', 'valence', 'acousticness', 'speechiness']\n",
+    "X = df_filtered[features]\n",
+    "y = df_filtered['genre']\n",
+    "\n",
+    "# Preprocessing: Scale the features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Encode the target labels (genres)\n",
+    "label_encoder = LabelEncoder()\n",
+    "y_encoded = label_encoder.fit_transform(y)\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y_encoded, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Train a Random Forest classifier (or choose another classifier)\n",
+    "model = RandomForestClassifier(random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Accuracy: {accuracy * 100:.2f}%\")\n",
+    "\n",
+    "# Optional: If you want to see the label encoding\n",
+    "print(\"Encoded labels for genres:\", label_encoder.classes_)"
+   ]
   }
  ],
  "metadata": {
