added filtered df, more data exploration/analysis

--- a/Kaitlyn/data_exploration_raw.ipynb
+++ b/Kaitlyn/data_exploration_raw.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "#### Data Exploration\n",
-    "This notebook serves to explore and verify that the data presented in Tableau visualizations accurately captures the raw data in ```songs_normalize.csv```."
+    "This notebook explores the data within ALL genres included in the original CSV. The model has been trained with a smaller number of genres. See ```data_exploration_model.ipynb``` for data exploration using only the data that the model was trained on."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -199,13 +199,13 @@
        "4        0.0408          0.001040    0.0845    0.879  172.656           pop  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# import csv\n",
+    "# read csv\n",
     "songs_df = pd.read_csv('../Resources/songs_normalize.csv')\n",
     "songs_df.head()"
    ]
@@ -214,12 +214,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualization #1: Genre Distribution"
+    "#### Genre Distribution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "59"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,12 +242,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualization #2: Top 5 Genres"
+    "#### Top 5 Genres"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "       'hip hop, pop'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "10                pop  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,12 +506,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualization #3: Top 5 Genres (Energy, Danceability, Valence)"
+    "#### Top 5 Genres (Energy, Danceability, Valence)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
    "source": [
     "# verify avg energy, danceability, valence in top 5 genres\n",
     "\n",
-    "# energy\n",
+    "# ENERGY\n",
     "\n",
     "print(f'Average Energy for Top 5 Genres:')\n",
     "\n",
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
    "source": [
     "# verify avg energy, danceability, valence in top 5 genres\n",
     "\n",
-    "# danceability\n",
+    "# DANCEABILITY\n",
     "\n",
     "print(f'Average Danceability for Top 5 Genres')\n",
     "\n",
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
    "source": [
     "# verify avg energy, danceability, valence in top 5 genres\n",
     "\n",
-    "# valence\n",
+    "# VALENCE\n",
     "\n",
     "print(f'Average Valence for Top 5 Genres')\n",
     "\n",
@@ -695,12 +695,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualization #4: Top 5 Genres (Speechiness, Acousticness, Instrumentalness)"
+    "#### Top 5 Genres (Speechiness, Acousticness, Instrumentalness)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,8 @@
    "source": [
     "# verify avg speechiness, acousticness, instrumentalness in top 5 genres\n",
     "\n",
-    "# speechiness\n",
+    "# SPEECHINESS \n",
+    "\n",
     "print(f'Average Speechiness for Top 5 Genres')\n",
     "\n",
     "# pop\n",
@@ -759,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +779,8 @@
    "source": [
     "# verify avg speechiness, acousticness, instrumentalness in top 5 genres\n",
     "\n",
-    "# acousticness \n",
+    "# ACOUSTICNESS\n",
+    " \n",
     "print(f'Average Acousticness for Top 5 Genres')\n",
     "\n",
     "# pop\n",
@@ -818,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +839,8 @@
    "source": [
     "# verify avg speechiness, acousticness, instrumentalness in top 5 genres\n",
     "\n",
-    "# instrumentalness\n",
+    "# INSTRUMENTALNESS\n",
+    "\n",
     "print(f'Average Instrumentalness for Top 5 Genres')\n",
     "\n",
     "# pop\n",
@@ -880,12 +883,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Visualization 5: Top 5 Genres (Tempo)"
+    "#### Top 5 Genres (Tempo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -908,39 +911,46 @@
     "\n",
     "# pop\n",
     "genre_1_tempo = top_5_df[top_5_df['genre'] == 'pop']\n",
-    "avg_tempo_1 = genre_1_instrument['tempo'].mean()\n",
+    "avg_tempo_1 = genre_1_tempo['tempo'].mean()\n",
     "avg_tempo_1\n",
     "\n",
     "print(f'[pop] = {avg_tempo_1:.4f}')\n",
     "\n",
     "# hip hop, pop\n",
     "genre_2_tempo = top_5_df[top_5_df['genre'] == 'hip hop, pop']\n",
-    "avg_tempo_2 = genre_2_instrument['tempo'].mean()\n",
+    "avg_tempo_2 = genre_2_tempo['tempo'].mean()\n",
     "avg_tempo_2\n",
     "\n",
     "print(f'[hip hop, pop] = {avg_tempo_2:.4f}')\n",
     "\n",
     "# hip hop, pop, R&B\n",
     "genre_3_tempo = top_5_df[top_5_df['genre'] == 'hip hop, pop, R&B']\n",
-    "avg_tempo_3 = genre_3_instrument['tempo'].mean()\n",
+    "avg_tempo_3 = genre_3_tempo['tempo'].mean()\n",
     "avg_tempo_3\n",
     "\n",
     "print(f'[hip hop, pop, R&B] = {avg_tempo_3:.4f}')\n",
     "\n",
     "# pop, Dance/Electronic\n",
     "genre_4_tempo = top_5_df[top_5_df['genre'] == 'pop, Dance/Electronic']\n",
-    "avg_tempo_4 = genre_4_instrument['tempo'].mean()\n",
+    "avg_tempo_4 = genre_4_tempo['tempo'].mean()\n",
     "avg_tempo_4\n",
     "\n",
     "print(f'[pop, Dance/Electronic] = {avg_tempo_1:.4f}')\n",
     "\n",
     "# pop, R&B\n",
     "genre_5_tempo = top_5_df[top_5_df['genre'] == 'pop, R&B']\n",
-    "avg_tempo_5 = genre_5_instrument['tempo'].mean()\n",
+    "avg_tempo_5 = genre_5_tempo['tempo'].mean()\n",
     "avg_tempo_5\n",
     "\n",
     "print(f'[pop, R&B] = {avg_tempo_5:.4f}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
