adding song classification code

--- a/Adriel/Deploying_machine.ipynb
+++ b/Adriel/Deploying_machine.ipynb
@@ -343,7 +343,7 @@
    "source": [
     "# Load the model\n",
     "from tensorflow.keras.models import load_model\n",
-    "model = load_model(\"spotify_trained.h5\")"
+    "model = load_model(\"best_model.h5\")"
    ]
   },
   {
@@ -352,41 +352,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spotify_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select a specific row, e.g., row index 0\n",
-    "row_to_classify = spotify_df.iloc[0]\n",
-    "# Preprocess the row's features (same steps as for the training data)\n",
-    "# Example: assuming these are the features used in training\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Assuming you have already fitted the scaler on the training data\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "\n",
+    "# Select a specific row, e.g., make sure it matches \n",
+    "row_to_classify = spotify_df.iloc[14]\n",
+    "\n",
+    "# Define the features used during training\n",
     "features = ['duration_ms', 'explicit', 'year', 'popularity', 'danceability',\n",
-    "       'energy', 'key', 'loudness', 'mode', 'speechiness', 'acousticness',\n",
-    "       'instrumentalness', 'liveness', 'valence', 'tempo', 'duration_ms',\n",
-    "       'explicit', 'year', 'popularity', 'danceability', 'energy', 'key',\n",
-    "       'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness',\n",
-    "       'liveness', 'valence', 'tempo', 'genre_Dance/Electronic', 'genre_R&B',\n",
-    "       'genre_country', 'genre_hip hop', 'genre_latin', 'genre_metal',\n",
-    "       'genre_pop', 'genre_rock']\n",
+    "            'energy', 'key', 'loudness', 'mode', 'speechiness', 'acousticness',\n",
+    "            'instrumentalness', 'liveness', 'valence', 'tempo']  # 14 distinct features\n",
+    "\n",
+    "# Define your genre labels\n",
+    "genre_labels = ['Dance/Electronic', 'R&B', 'Country', 'Hip Hop',\n",
+    "                'Latin', 'Metal', 'Pop', 'Rock']\n",
+    "\n",
     "# Extract feature values for the selected row\n",
     "row_features = row_to_classify[features].values.reshape(1, -1)\n",
-    "# Apply the same scaler used during training (if applicable)\n",
-    "scaler = StandardScaler()\n",
-    "row_features_scaled = scaler.fit_transform(row_features)\n",
+    "\n",
+    "# Apply the same scaler used during training\n",
+    "row_features_scaled = scaler.transform(row_features)\n",
+    "\n",
     "# Make a classification prediction with the model\n",
-    "predicted_genre = model.predict(row_features_scaled)\n",
-    "# Compare the predicted genre with the actual genre\n",
-    "actual_genre = row_to_classify['genre']\n",
-    "is_classified_correctly = predicted_genre[0] == actual_genre\n",
-    "# Output the results\n",
-    "print(f\"Predicted Genre: {predicted_genre[0]}\")\n",
-    "print(f\"Actual Genre: {actual_genre}\")\n",
-    "print(f\"Classified Correctly: {is_classified_correctly}\")"
+    "predicted_genre_prob = model.predict(row_features_scaled)\n",
+    "predicted_genre_index = predicted_genre_prob.argmax(axis=-1)  # Get the index of the highest probability\n",
+    "predicted_genre_label = genre_labels[predicted_genre_index[0]]  # Map index to genre label\n",
+    "\n",
+    "# Get the actual genre (one-hot encoded in the DataFrame) and convert it to label\n",
+    "actual_genre_one_hot = row_to_classify[['genre_Dance/Electronic', 'genre_R&B',\n",
+    "       'genre_country', 'genre_hip hop', 'genre_latin', 'genre_metal',\n",
+    "       'genre_pop', 'genre_rock']].values\n",
+    "\n",
+    "# Find the index of the actual genre from the one-hot encoding\n",
+    "actual_genre_index = actual_genre_one_hot.argmax()\n",
+    "actual_genre_label = genre_labels[actual_genre_index]\n",
+    "\n",
+    "# Get the song name from the index\n",
+    "song_name = spotify_df.index[14]  # Select the row\n",
+    "\n",
+    "# Check if the predicted genre matches the actual genre\n",
+    "is_classified_correctly = predicted_genre_label == actual_genre_label\n",
+    "\n",
+    "# Output the results including the song name\n",
+    "print(f\"Song Name: {song_name}\")\n",
+    "print(f\"Predicted Genre: {predicted_genre_label}\")\n",
+    "print(f\"Actual Genre: {actual_genre_label}\")\n",
+    "print(f\"Classified Correctly: {is_classified_correctly}\")\n"
    ]
   }
  ],
