--- a/christian/neural_net.ipynb
+++ b/christian/neural_net.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 31\u001b[0m\n\u001b[1;32m     28\u001b[0m     y_categorical \u001b[38;5;241m=\u001b[39m to_categorical(y_encoded)\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# Split the data into training and testing sets\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m train_test_split(X, y_categorical, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m# Instantiate the StandardScaler\u001b[39;00m\n\u001b[1;32m     34\u001b[0m scaler \u001b[38;5;241m=\u001b[39m StandardScaler()\n",
+      "Cell \u001b[0;32mIn[3], line 31\u001b[0m\n\u001b[1;32m     28\u001b[0m     y_categorical \u001b[38;5;241m=\u001b[39m to_categorical(y_encoded)\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# Split the data into training and testing sets\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m train_test_split(X, y_categorical, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m# Instantiate the StandardScaler\u001b[39;00m\n\u001b[1;32m     34\u001b[0m scaler \u001b[38;5;241m=\u001b[39m StandardScaler()\n",
       "\u001b[0;31mNameError\u001b[0m: name 'y_categorical' is not defined"
      ]
     }
@@ -115,7 +115,7 @@
     "model.summary()\n",
     "\n",
     "# Train the model\n",
-    "history = model.fit(X_train_scaled, y_train, epochs=50, batch_size=32, validation_data=(X_test_scaled, y_test))"
+    "history = model.fit(X_train_scaled, y_tra"
    ]
   }
  ],
