pushing final edits

--- a/Main/Deploying_machine.ipynb
+++ b/Main/Deploying_machine.ipynb
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "# Read in our data\n",
-    "spotify_df = pd.read_csv(\"songs_filtered.csv\")\n",
+    "spotify_df = pd.read_csv(\"../songs_filtered.csv\")\n",
     "spotify_df.head()"
    ]
   },
@@ -154,14 +154,11 @@
    "outputs": [],
    "source": [
     "# Create scaler instance\n",
-    "X_scaler = skl.preprocessing.StandardScaler()\n",
+    "scaler = skl.preprocessing.StandardScaler()\n",
     "\n",
-    "# Fit the scaler\n",
-    "X_scaler.fit(X_train)\n",
-    "\n",
-    "# Scale the data\n",
-    "X_train_scaled = X_scaler.transform(X_train)\n",
-    "X_test_scaled = X_scaler.transform(X_test)"
+    "# Fit & Scale\n",
+    "X_train_scaled=scaler.fit_transform(X_train)\n",
+    "X_test_scaled=scaler.transform(X_test)"
    ]
   },
   {
@@ -174,28 +171,14 @@
     "model = models.Sequential()\n",
     "\n",
     "# Input layer (number of features in X_train)\n",
-    "model.add(layers.InputLayer(input_shape=(X_train.shape[1],)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "model.add(tf.keras.layers.InputLayer(units = 10, shape=(X_train.shape[1],)))\n",
+    "\n",
     "# Hidden layers (example with 2 hidden layers)\n",
-    "model.add(layers.Dense(64, activation='relu'))\n",
-    "model.add(layers.Dense(32, activation='relu'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "model.add(tf.keras.layers.Dense(64, activation='relu'))\n",
+    "model.add(tf.keras.layers.Dense(32, activation='relu'))\n",
+    "\n",
     "# Output layer (number of genres, using softmax for multi-class classification)\n",
-    "model.add(layers.Dense(y_train.shape[1], activation='softmax'))"
+    "model.add(tf.keras.layers.Dense(units = y_train.shape[1], activation='softmax'))"
    ]
   },
   {
@@ -225,7 +208,7 @@
    "outputs": [],
    "source": [
     "# Evaluate the model on the test set\n",
-    "test_loss, test_acc = model.evaluate(X_test, y_test)\n",
+    "test_loss, test_acc = model.evaluate(X_test_scaled, y_test)\n",
     "print(f'Test accuracy: {test_acc}')"
    ]
   },
@@ -324,8 +307,158 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save model\n",
-    "model.save(\"spotify_trained.h5\")"
+    "# Get the best model hyperparameters\n",
+    "best_hyper = tuner.get_best_hyperparameters(2)[0]\n",
+    "best_hyper.values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training Top 3 Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models\n",
+    "\n",
+    "def create_best_model1():\n",
+    "    nn_model = models.Sequential()\n",
+    "\n",
+    "    # Best parameters from tuning\n",
+    "    activation = 'relu'  # Best activation function\n",
+    "    first_units = 21  # Number of neurons in the first layer\n",
+    "\n",
+    "    # Input layer with first_units and relu activation\n",
+    "    nn_model.add(tf.keras.layers.Dense(units=first_units, activation=activation, input_dim=X_train.shape[1]))\n",
+    "\n",
+    "    # Hidden layers based on the best parameters\n",
+    "    nn_model.add(tf.keras.layers.Dense(units=16, activation=activation))  # Layer 1\n",
+    "\n",
+    "    # Output layer: Use softmax for multi-class classification (number of classes should match your data)\n",
+    "    nn_model.add(tf.keras.layers.Dense(units=y_train.shape[1], activation='softmax'))\n",
+    "\n",
+    "    # Compile the model with categorical crossentropy loss, adam optimizer, and accuracy metric\n",
+    "    nn_model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "\n",
+    "    return nn_model\n",
+    "\n",
+    "# Create the model\n",
+    "best_model = create_best_model1()\n",
+    "\n",
+    "# Train the model using the best parameters\n",
+    "best_model.fit(X_train_scaled, y_train, epochs=20)\n",
+    "\n",
+    "# Evaluate the model on the test set\n",
+    "test_loss, test_acc = best_model.evaluate(X_test_scaled, y_test, verbose=2)\n",
+    "print(f'Test accuracy: {test_acc}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models\n",
+    "\n",
+    "def create_best_model2():\n",
+    "    nn_model = models.Sequential()\n",
+    "\n",
+    "    # Best parameters from tuning\n",
+    "    activation = 'relu'  # Best activation function\n",
+    "    first_units = 16  # Number of neurons in the first layer\n",
+    "\n",
+    "    # Input layer with first_units and relu activation\n",
+    "    nn_model.add(tf.keras.layers.Dense(units=first_units, activation=activation, input_dim=X_train.shape[1]))\n",
+    "\n",
+    "    # Hidden layers based on the best parameters\n",
+    "    nn_model.add(tf.keras.layers.Dense(units=26, activation=activation))  # Layer 1\n",
+    "    nn_model.add(tf.keras.layers.Dense(units=21, activation=activation))  # Layer 2\n",
+    "\n",
+    "    # Output layer: Use softmax for multi-class classification (number of classes should match your data)\n",
+    "    nn_model.add(tf.keras.layers.Dense(units=y_train.shape[1], activation='softmax'))\n",
+    "\n",
+    "    # Compile the model with categorical crossentropy loss, adam optimizer, and accuracy metric\n",
+    "    nn_model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "\n",
+    "    return nn_model\n",
+    "\n",
+    "# Create the model\n",
+    "best_model2 = create_best_model2()\n",
+    "\n",
+    "# Train the model using the best parameters\n",
+    "best_model2.fit(X_train_scaled, y_train, epochs=7)\n",
+    "\n",
+    "# Evaluate the model on the test set\n",
+    "test_loss, test_acc = best_model2.evaluate(X_test_scaled, y_test, verbose=2)\n",
+    "print(f'Test accuracy: {test_acc}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models\n",
+    "\n",
+    "def create_best_model3():\n",
+    "    nn_model = models.Sequential()\n",
+    "\n",
+    "    # Best parameters from tuning\n",
+    "    activation = 'relu'  # Best activation function\n",
+    "    first_units = 16  # Number of neurons in the first layer\n",
+    "\n",
+    "    # Input layer with first_units and relu activation\n",
+    "    nn_model.add(tf.keras.layers.Dense(units=first_units, activation=activation, input_dim=X_train.shape[1]))\n",
+    "\n",
+    "    # Hidden layers based on the best parameters\n",
+    "    nn_model.add(tf.keras.layers.Dense(units=26, activation=activation))  # Layer 1\n",
+    "    nn_model.add(tf.keras.layers.Dense(units=26, activation=activation))  # Layer 2\n",
+    "\n",
+    "\n",
+    "    # Output layer: Use softmax for multi-class classification (number of classes should match your data)\n",
+    "    nn_model.add(tf.keras.layers.Dense(units=y_train.shape[1], activation='softmax'))\n",
+    "\n",
+    "    # Compile the model with categorical crossentropy loss, adam optimizer, and accuracy metric\n",
+    "    nn_model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "\n",
+    "    return nn_model\n",
+    "\n",
+    "# Create the model\n",
+    "best_model3 = create_best_model3()\n",
+    "\n",
+    "# Train the model using the best parameters\n",
+    "best_model3.fit(X_train_scaled, y_train, epochs=20)\n",
+    "\n",
+    "# Evaluate the model on the test set\n",
+    "test_loss, test_acc = best_model3.evaluate(X_test_scaled, y_test, verbose=2)\n",
+    "print(f'Test accuracy: {test_acc}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the model\n",
+    "model_save_path = 'best_model.h5'\n",
+    "best_model.save(model_save_path)\n",
+    "\n",
+    "print(f\"Model saved to {model_save_path}\")"
    ]
   },
   {
