--- a/Main/Deploying_machine.ipynb
+++ b/Main/Deploying_machine.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if not installed run an install for the following: !pip install keras-tuner"
+    "#install the following before running: !pip install keras-tuner"
    ]
   },
   {
@@ -18,7 +18,8 @@
     "# Import dependencies \n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -41,22 +42,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sklearn scaling\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "import sklearn as skl"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Keras Specific Dependencies"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Keras\n",
     "import keras_tuner as kt\n",
     "from tensorflow import keras\n",
@@ -65,8 +50,18 @@
     "from tensorflow.keras.layers import Dense\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler,OneHotEncoder\n",
-    "from keras_tuner import HyperParameters\n",
-    "import pandas as pd"
+    "from keras_tuner import HyperParameters\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sklearn scaling\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import sklearn as skl"
    ]
   },
   {
@@ -76,7 +71,7 @@
    "outputs": [],
    "source": [
     "# Read in our data\n",
-    "spotify_df = pd.read_csv(\"../songs_filtered.csv\")\n",
+    "spotify_df = pd.read_csv(\"songs_filtered.csv\")\n",
     "spotify_df.head()"
    ]
   },
