added tableau workbook

--- a/Kaitlyn/data_cleaning_exploration.ipynb
+++ b/Kaitlyn/data_cleaning_exploration.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Data Exploration\n",
-    "This notebook serves to explore and verify that the data presented in Tableau visualizations accurately captures the raw data in ```songs_normalize.csv```. \n",
+    "#### Data Cleaning Data Exploration\n",
+    "This notebook serves to clean up the data to create a concise dataset to feed into the model. This notebook also further explores and verifies that the data presented in Tableau visualizations accurately captures the raw data in ```songs_normalize.csv```. \n",
     "\n",
-    "**NOTE**: This notebook explores ONLY the genres used to train the model, see below. See ```data_exploration_raw.ipynb``` for data exploration using ALL genres included in the raw data."
+    "**NOTE**: This notebook explores ONLY the genres used to train the model (top 3), see below. See ```data_exploration_raw.ipynb``` for data exploration using ALL genres included in the raw data."
    ]
   },
   {
@@ -1438,53 +1438,6 @@
     "avg_instrument_3\n",
     "\n",
     "print(f'[rock] = {avg_instrument_3:.4f}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average Tempo for Top 5 Genres\n",
-      "[pop] = 120.55\n",
-      "[hip hop] = 116.86\n",
-      "[rock] = 129.94\n"
-     ]
-    }
-   ],
-   "source": [
-    "# verify avg tempo in top 5 genres\n",
-    "\n",
-    "# TEMPO:\n",
-    "# The overall estimated tempo of a track in beats per minute (BPM). \n",
-    "# In musical terminology, tempo is the speed or pace of a given piece and derives directly from the average beat duration.\n",
-    "\n",
-    "print(f'Average Tempo for Top 5 Genres')\n",
-    "\n",
-    "# pop\n",
-    "genre_1_tempo = songs_filtered_df[songs_filtered_df['genre'] == 'pop']\n",
-    "avg_tempo_1 = genre_1_tempo['tempo'].mean()\n",
-    "avg_tempo_1\n",
-    "\n",
-    "print(f'[pop] = {avg_tempo_1:.2f}')\n",
-    "\n",
-    "# hip hop\n",
-    "genre_2_tempo = songs_filtered_df[songs_filtered_df['genre'] == 'hip hop']\n",
-    "avg_tempo_2 = genre_2_tempo['tempo'].mean()\n",
-    "avg_tempo_2\n",
-    "\n",
-    "print(f'[hip hop] = {avg_tempo_2:.2f}')\n",
-    "\n",
-    "# rock\n",
-    "genre_3_tempo = songs_filtered_df[songs_filtered_df['genre'] == 'rock']\n",
-    "avg_tempo_3 = genre_3_tempo['tempo'].mean()\n",
-    "avg_tempo_3\n",
-    "\n",
-    "print(f'[rock] = {avg_tempo_3:.2f}')"
    ]
   },
   {
